--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@chakra-ui/react": "^3.3.0",
+    "@chakra-ui/react": "^3.3.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.4.0",
+    "@mui/material": "^6.4.0",
+    "antd": "^5.23.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
-    "framer-motion": "^11.17.0",
+    "framer-motion": "^11.18.0",
     "lucide-react": "^0.469.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
