--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "openai": "^4.79.3"
   }
 }
