--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "eject": "react-scripts eject",
     "dev": "react-scripts start"
   },
+  "proxy": "http://localhost:4000",
   "eslintConfig": {
     "extends": [
       "react-app",
